--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiFragment.html
@@ -26,6 +26,7 @@
 						<!-- gli input hidden non sono necessari se NON editabile -->
 						<th:block th:unless="${showOnly}">
 							<input type="hidden" name="editId" th:value="${accreditamentoAllegatiWrapper.accreditamentoId}" />
+							<input th:if="${editabile}" type="hidden" th:field="${accreditamentoAllegatiWrapper.accreditamento}" />
 							<input type="hidden" th:field="${accreditamentoAllegatiWrapper.idEditabili}" />
 							<input type="hidden" th:field="${accreditamentoAllegatiWrapper.statoAccreditamento}" />
 							<input type="hidden" th:field="${accreditamentoAllegatiWrapper.fieldIntegrazione}" />
@@ -38,7 +39,7 @@
 						</th:block>
 
 						<!-- info -->
-						<h2 th:if="${accreditamentoAllegatiWrapper.statoAccreditamento == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INTEGRAZIONE}" class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.info_applicazione_integrazione}"></h2>
+						<h2 th:if="${editabile and (accreditamentoAllegatiWrapper.statoAccreditamento == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INTEGRAZIONE or accreditamentoAllegatiWrapper.accreditamento.isVariazioneDati())}" class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.info_applicazione_integrazione}"></h2>
 
 						<!-- allegato 1 (atto costitutivo e statuto) -->
 						<!-- <th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, attoCostitutivo,  ${!showOnly ? 'attoCostitutivo' : null}, null, null, true, ${mode}, true)" ></th:block> -->
