--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -415,6 +415,8 @@
 									<li><a th:text="#{label.modifica}" onclick="switchMode('edit')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canShowValutazione and !accreditamentoWrapper.canValutaDomanda}" th:text="#{label.mostra_valutazione}" onclick="switchMode('validate')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canValutaDomanda}" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a></li>
+									<li class="divider actions" th:if="${accreditamentoWrapper.canVariazioneDati}"></li>
+									<li><a th:if="${accreditamentoWrapper.canVariazioneDati}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/variazioneDati|}" th:text="#{label.variazione_dati}"></a></li>
 									<li class="divider actions" th:if="${accreditamentoWrapper.canEnableField or accreditamentoWrapper.canPrendiInCarica or accreditamentoWrapper.canPresaVisione or accreditamentoWrapper.canAssegnaNuovoGruppo}"></li>
 									<li><a th:if="${accreditamentoWrapper.canEnableField}" th:text="#{label.abilita_id_editabili}" onclick="switchMode('enableField')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canPrendiInCarica}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/takeCharge|}" th:text="#{label.prendi_in_carica}"></a></li>
@@ -442,7 +444,8 @@
 							<th:block th:if="${#authentication.principal.isProvider()}">
 								<a th:if="${accreditamentoWrapper.accreditamento.isBozza() or
 									accreditamentoWrapper.accreditamento.isIntegrazione() or
-									accreditamentoWrapper.accreditamento.isPreavvisoRigetto()}" class="btn btn-success" th:text="#{label.modifica}" onclick="switchMode('edit')"></a>
+									accreditamentoWrapper.accreditamento.isPreavvisoRigetto() or
+									accreditamentoWrapper.accreditamento.isVariazioneDati()}" class="btn btn-success" th:text="#{label.modifica}" onclick="switchMode('edit')"></a>
 							</th:block>
 							<!-- menù a pulsanti separati per il referee -->
 							<th:block th:if="${#authentication.principal.isReferee()}">
