--- a/src/main/resources/templates/provider/providerFragment.html
+++ b/src/main/resources/templates/provider/providerFragment.html
@@ -27,6 +27,7 @@
 						<th:block th:unless="${showOnly}">
 							<input type="hidden" name="editId" th:value="${providerWrapper.provider.id}" />
 							<input type="hidden" th:field="${providerWrapper.accreditamentoId}" />
+							<input th:if="${editabile}" type="hidden" th:field="${providerWrapper.accreditamento}" />
 							<input type="hidden" th:field="${providerWrapper.idEditabili}" />
 							<input type="hidden" th:field="${providerWrapper.statoAccreditamento}" />
 							<input type="hidden" th:field="${providerWrapper.fieldIntegrazione}" />
@@ -39,7 +40,7 @@
 						</th:block>
 
 						<!-- info -->
-						<h2 th:if="${providerWrapper.statoAccreditamento == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INTEGRAZIONE}" class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.info_applicazione_integrazione}"></h2>
+						<h2 th:if="${editabile and (providerWrapper.statoAccreditamento == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INTEGRAZIONE or providerWrapper.accreditamento.isVariazioneDati())}" class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.info_applicazione_integrazione}"></h2>
 
 						<!-- TIPO ORGANIZZATORE -->
 						<div th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:classappend="${#fields.hasErrors('providerWrapper.provider.tipoOrganizzatore')} ? 'bad'">
