--- a/src/main/resources/templates/sede/sedeFragment.html
+++ b/src/main/resources/templates/sede/sedeFragment.html
@@ -28,6 +28,7 @@
 						<th:block th:unless="${showOnly}">
 							<input type="hidden" name="editId" th:value="${sedeWrapper.sede.id}" />
 							<input type="hidden" th:field="${sedeWrapper.accreditamentoId}" />
+							<input th:if="${editabile}" type="hidden" th:field="${sedeWrapper.accreditamento}" />
 							<input type="hidden" th:field="${sedeWrapper.idEditabili}" />
 							<input type="hidden" th:field="${sedeWrapper.statoAccreditamento}" />
 							<input type="hidden" th:field="${sedeWrapper.fieldIntegrazione}" />
@@ -40,7 +41,7 @@
 						</th:block>
 
 						<!-- info -->
-						<h2 th:if="${sedeWrapper.statoAccreditamento == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INTEGRAZIONE}" class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.info_applicazione_integrazione}"></h2>
+						<h2 th:if="${editabile and (sedeWrapper.statoAccreditamento == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INTEGRAZIONE or sedeWrapper.accreditamento.isVariazioneDati())}" class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.info_applicazione_integrazione}"></h2>
 
 						<div th:if="${valutabile and isFULL}" class="item validateAlert form-group" th:classappend="${#fields.hasErrors('sedeWrapper')} ? 'bad'">
 							<th:block>
@@ -252,6 +253,7 @@
 										data-hide-disabled="false"
 										onchange="sendAjaxRequestCAP()"
 										title="Seleziona un comune..."
+										th:attr="data-editabile=${#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.comune'))}"
 										th:disabled="${!#lists.contains(sedeWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('sede.comune'))}">
 										<option th:value="${sedeWrapper.sede.comune}"
 											th:text="${sedeWrapper.sede.comune}"/>
