prima parte di giro agganciata a Bonita

--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -302,7 +302,7 @@
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 												<div class="radio">
 													<label>
-														<input type="radio" class="flat selezioneEsistoVariazioneDati" th:field="${accreditamentoWrapper.destinazioneVariazioneDati}" th:value="${T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).ACCREDITATO}" />
+														<input type="radio" class="flat selezioneEsistoVariazioneDati" th:field="${accreditamentoWrapper.destinazioneVariazioneDati}" th:value="${T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).CONCLUSO}" />
 														<span th:text="#{label.conferma_variazione_dati}"></span>
 													</label>
 												</div>
