bug fix accreditamento e giro concluso!

--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -1216,12 +1216,12 @@
 													</div>
 												</div>
 
-												<div class="item form-group">
+												<div class="item form-group" th:if="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.referenteInformatico != null}">
 													<label class="control-label col-md-3 col-sm-3 col-xs-12">
 														<span class="label-show" th:text="#{label.referente_informatico}">Referente Informatico</span>
 													</label>
 													<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
-														<div class="value" th:text="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.referenteInformatico.getFullName()}"></div>
+														<div class="value" th:text="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo.referenteInformatico?.getFullName()}"></div>
 													</div>
 												</div>
 
